# GeoSmthngWizard

./: Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/app/: settings.py  urls.py
app/geo_smthng_wizard/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
app/geo_smthng_wizard/migrations/: 0001_initial.py  0002_rename_location_capital_geom_and_more.py
geo_smthng_wizard/: manage.py
geo_smthng_wizard/geo_smthng_wizard/: asgi.py  settings.py  urls.py  wsgi.py
