[tool.poetry]
name = "geosmthngwizard"
version = "0.1.0"
description = ""
authors = ["Dmitriy Fetyukhin <fetyukhindmitriy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = ">=4.0.1"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
